syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cde.utils.grpc";
option java_outer_classname = "GRPCServer";

service GRPCServerService {
    // activity
    rpc getLatestDeviceActivity(GRPCLatestDeviceActivityRequest) returns (GRPCActivityData) {}
    rpc getDeviceActivityData(GRPCActivityDataRequest) returns (GRPCActivityDataResponse) {}
    // device location
    rpc getLatestDeviceLocation(GRPCLatestDeviceLocationRequest) returns (GRPCLatestDeviceLocationResponse) {}
    // accelerometer
    rpc getDeviceAccelerometerData(GRPCAccelerometerDataRequest) returns (GRPCAccelerometerDataResponse) {}
    // gyroscope
    rpc getDeviceGyroscopeData(GRPCGyroscopeDataRequest) returns (GRPCGyroscopeDataResponse) {}
    // gps
    rpc getDeviceGPSData(GRPCGPSDataRequest) returns (GRPCGPSDataResponse) {}
}

// Device
message GRPCLatestDeviceLocationRequest {
    string deviceId = 1;
}

message GRPCLatestDeviceLocationResponse {
    string timestamp = 1;
    double latitude = 2;
    double longitude = 3;
}

// Activity
message GRPCLatestDeviceActivityRequest {
    string deviceId = 1;

}

message GRPCActivityDataRequest {
    string deviceId = 1;
    string startTimestamp = 2;
    string endTimestamp = 3;
    int32 offset = 4;
    int32 limit = 5;
}

message GRPCActivityDataResponse {
    repeated GRPCActivityData samples = 1;
    int32 offset = 2;
    int32 limit = 3;
    int64 totalElements = 4;
}

message GRPCActivityData {
    string timestamp = 1;
    string activity = 2;
}

// Accelerometer
message GRPCAccelerometerDataRequest {
    string deviceId = 1;
    string startTimestamp = 2;
    string endTimestamp = 3;
    int32 offset = 4;
    int32 limit = 5;
}

message GRPCAccelerometerDataResponse {
    repeated GRPCAccelerometerData samples = 1;
    int32 offset = 2;
    int32 limit = 3;
    int64 totalElements = 4;
}

message GRPCAccelerometerData {
    string timestamp = 1;
    double x = 2;
    double y = 3;
    double z = 4;
}

// GPS
message GRPCGPSDataRequest {
    string deviceId = 1;
    string startTimestamp = 2;
    string endTimestamp = 3;
    int32 offset = 4;
    int32 limit = 5;
}

message GRPCGPSDataResponse {
    repeated GRPCGPSData samples = 1;
    int32 offset = 2;
    int32 limit = 3;
    int64 totalElements = 4;
}

message GRPCGPSData {
    string timestamp = 1;
    double latitude = 2;
    double longitude = 3;
}

// Gyroscope
message GRPCGyroscopeDataRequest {
    string deviceId = 1;
    string startTimestamp = 2;
    string endTimestamp = 3;
    int32 offset = 4;
    int32 limit = 5;
}

message GRPCGyroscopeDataResponse {
    repeated GRPCGyroscopeData samples = 1;
    int32 offset = 2;
    int32 limit = 3;
    int64 totalElements = 4;
}

message GRPCGyroscopeData {
    string timestamp = 1;
    double alpha = 2;
    double beta = 3;
    double gamma = 4;
}